rename the project files names

--- a/Online-FIR-system/src/main/resources/application.properties
+++ b/Online-FIR-system/src/main/resources/application.properties
@@ -22,8 +22,8 @@ logging.level.org.springframework.mail=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pavankumarpatilnaruto@gmail.com
-spring.mail.password=fjtuqkvwjdjckh
+spring.mail.username=pavan@gmail.com
+spring.mail.password=Password
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
